// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton> should render as expected 1`] = `
<DocumentFragment>
  <label
    class="RadioButtonStyle__RadioContainer-sc-1dmv219-3 kRaKRL aries-radiobtn"
    tabindex="0"
  >
    <input
      name="job-type"
      type="radio"
      value="full-time"
    />
    <span
      class="RadioButtonStyle__RadioIcon-sc-1dmv219-0 grrbBs"
      data-testid="radio-icon"
    />
    <span
      class="RadioButtonStyle__RadioLabel-sc-1dmv219-1 heSmNU radiobtn-content"
      tabindex="-1"
    >
      Full Time
    </span>
  </label>
</DocumentFragment>
`;

exports[`<RadioButton> should render as expected 2`] = `
<DocumentFragment>
  <label
    class="RadioButtonStyle__RadioContainer-sc-1dmv219-3 jVAljR aries-radiobtn"
    tabindex="0"
  >
    <input
      name="job-type"
      type="radio"
      value="full-time"
    />
    <span
      class="RadioButtonStyle__RadioIcon-sc-1dmv219-0 ejOjGG"
      data-testid="radio-icon"
    />
    <span
      class="RadioButtonStyle__RadioLabel-sc-1dmv219-1 jphpKA radiobtn-content"
      tabindex="-1"
    >
      Full Time
    </span>
  </label>
</DocumentFragment>
`;

exports[`<RadioButton> should render as expected 3`] = `
<DocumentFragment>
  <label
    class="RadioButtonStyle__RadioContainer-sc-1dmv219-3 kRaKRL aries-radiobtn"
    tabindex="0"
  >
    <input
      name="job-type"
      type="radio"
      value="full-time"
    />
    <span
      class="RadioButtonStyle__RadioIcon-sc-1dmv219-0 grrbBs"
      data-testid="radio-icon"
    />
    <span
      class="RadioButtonStyle__RadioLabel-sc-1dmv219-1 heSmNU radiobtn-content"
      tabindex="-1"
    >
      Full Time
    </span>
  </label>
  <label
    class="RadioButtonStyle__RadioContainer-sc-1dmv219-3 kRaKRL aries-radiobtn"
    tabindex="0"
  >
    <input
      name="job-type"
      type="radio"
      value="intership"
    />
    <span
      class="RadioButtonStyle__RadioIcon-sc-1dmv219-0 grrbBs"
      data-testid="radio-icon"
    />
    <span
      class="RadioButtonStyle__RadioLabel-sc-1dmv219-1 heSmNU radiobtn-content"
      tabindex="-1"
    >
      Intership
    </span>
  </label>
</DocumentFragment>
`;

exports[`<RadioButton> should render as expected 4`] = `
<DocumentFragment>
  <label
    class="RadioButtonStyle__RadioContainer-sc-1dmv219-3 kRaKRL aries-radiobtn"
    tabindex="0"
  >
    <input
      checked=""
      name="job-type"
      type="radio"
      value="full-time"
    />
    <span
      class="RadioButtonStyle__RadioIcon-sc-1dmv219-0 grrbBs"
      data-testid="radio-icon"
    />
    <span
      class="RadioButtonStyle__RadioLabel-sc-1dmv219-1 heSmNU radiobtn-content"
      tabindex="-1"
    >
      Full Time
    </span>
  </label>
  <label
    class="RadioButtonStyle__RadioContainer-sc-1dmv219-3 kRaKRL aries-radiobtn"
    tabindex="0"
  >
    <input
      name="job-type"
      type="radio"
      value="intership"
    />
    <span
      class="RadioButtonStyle__RadioIcon-sc-1dmv219-0 grrbBs"
      data-testid="radio-icon"
    />
    <span
      class="RadioButtonStyle__RadioLabel-sc-1dmv219-1 heSmNU radiobtn-content"
      tabindex="-1"
    >
      Intership
    </span>
  </label>
</DocumentFragment>
`;
